--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-karma": "~0.8.3",
     "grunt-protractor-runner": "^5.0.0",
     "grunt-targethtml": "~0.2.6",
+    "karma": "^1.7.1",
     "karma-chrome-launcher": "~0.1.4",
     "karma-firefox-launcher": "~0.1.3",
     "karma-jasmine": "~0.1.5"
